# play-this-song

./: .pylintrc  build_frontend.sh  main.py  pyproject.toml
.github/workflows/: pylint.yml
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/entities/: artist.py  editor.py  song.py  twitch.py  user.py
app/models/: __init__.py  artist.py  db_models.py  song.py  user.py
app/repository/database/: song_repository.py
app/routers/: editor.py  login.py
app/schemes/: artist.py  common.py  editor.py  song.py
app/services/twitch_api/: auth.py
app/static/: asset-manifest.json  index.html
app/static/js/: main.9f340436.js.map  main.a34408c6.js  main.a34408c6.js.map
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx  store.ts
